--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
 
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.form{
+  display:flex;
+  justify-content: center;
+  
+}
+.section{
+  padding: 20px;
+  margin :200px;
 }
